@@ -23,6 +23,10 @@
 #include <sys/ioctl.h>
 #include <unistd.h>
 
+#ifdef __CYGWIN__
+#include <sys/socket.h> /*for FIONREAD*/
+#endif
+
 #include "config-srcpd.h"
 #include "io.h"
 #include "m605x.h"
