@@ -1,3 +1,7 @@
+2008-03-04 Guido Scholz <guido.scholz@bayernline.de>
+	* io.c, li100.c, loconet.c, m605x.c, portio.c, srcp-server.c,
+	ttycygwin.*, zimo.c: Fixed some Cygwin compile issues.
+
 2008-03-03 Guido Scholz <guido.scholz@bayernline.de>
 	* srcp-info.c: Fixed loss of info messages if they are send
 	close one after another.
